k8s/overlays/p2-platform/deployment-label-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-cicd-demo-app
  labels:
    app.kubernetes.io/name: gitops-cicd-demo-app
    app.kubernetes.io/part-of: k8s-platform-lab
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gitops-cicd-demo-app
        app.kubernetes.io/part-of: k8s-platform-lab
